objects/V_ODATA_CUST_BILL_HISTS__x.object
<CustomObject>
    <fields>
        <fullName>Account_POID__c</fullName>
        <description>Primary key of Account object in BRM.</description>
        <externalDeveloperName>ACCOUNT_POID</externalDeveloperName>
        <label>Account POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDOM__c</fullName>
        <description>BDOM</description>
        <externalDeveloperName>BDOM</externalDeveloperName>
        <label>BDOM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BILLING_PROFILE_ID__c</fullName>
        <description>BILLING_PROFILE_ID</description>
        <externalDeveloperName>BILLING_PROFILE_ID</externalDeveloperName>
        <label>Billing Profile Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billinfo_POID__c</fullName>
        <description>Foreign Key to BILLINFO_T object in BRM.</description>
        <externalDeveloperName>BILLINFO_POID</externalDeveloperName>
        <label>Billinfo POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAN__c</fullName>
        <externalDeveloperName>CUSTOMER_ACCOUNT_NO</externalDeveloperName>
        <label>Account</label>
        <length>30</length>
        <referenceTargetField>Account.CAN__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Bill History</relationshipLabel>
        <relationshipName>Customer_Bill_History</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>CHARGE_TYPE__c</fullName>
        <description>CHARGE_TYPE</description>
        <externalDeveloperName>CHARGE_TYPE</externalDeveloperName>
        <label>CHARGE_TYPE</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_ACCOUNT_NO__c</fullName>
        <description>CUSTOMER_ACCOUNT_NO</description>
        <externalDeveloperName>CUSTOMER_ACCOUNT_NO</externalDeveloperName>
        <label>CUSTOMER_ACCOUNT_NO</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVENT_DATE_PACIFIC__c</fullName>
        <description>Event Date in GMT converted to Pacific.</description>
        <externalDeveloperName>EVENT_DATE_PACIFIC</externalDeveloperName>
        <label>Pacific Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVENT_DATE__c</fullName>
        <description>EVENT_DATE</description>
        <externalDeveloperName>EVENT_DATE</externalDeveloperName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EVENT__c</fullName>
        <description>EVENT</description>
        <externalDeveloperName>EVENT</externalDeveloperName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventID__c</fullName>
        <description>EventID</description>
        <externalDeveloperName>BILL_ITEM_NO</externalDeveloperName>
        <label>Bill Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_POID_Type__c</fullName>
        <description>Mapped to Event_t.POID_TYPE in BRM</description>
        <externalDeveloperName>EVENT_POID_TYPE</externalDeveloperName>
        <label>Event POID Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_POID__c</fullName>
        <description>Foreign Key to EVENT_T object in BRM.</description>
        <externalDeveloperName>EVENT_ITEM_POID</externalDeveloperName>
        <label>Event POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_POID__c</fullName>
        <description>Foreign Key to ITEM_T object in BRM.</description>
        <externalDeveloperName>ITEM_POID</externalDeveloperName>
        <label>Item POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <description>Item</description>
        <externalDeveloperName>ITEM</externalDeveloperName>
        <label>Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <description>Line</description>
        <externalDeveloperName>LINE</externalDeveloperName>
        <label>Line</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order</description>
        <externalDeveloperName>ORDER</externalDeveloperName>
        <label>Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_METHOD__c</fullName>
        <description>PAYMENT_METHOD</description>
        <externalDeveloperName>PAYMENT_METHOD</externalDeveloperName>
        <label>Payment Method</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAY_TYPE__c</fullName>
        <description>PAY_TYPE</description>
        <externalDeveloperName>PAY_TYPE</externalDeveloperName>
        <label>PAY_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSON_Number__c</fullName>
        <description>PSON Number</description>
        <externalDeveloperName>PSON_NUMBER</externalDeveloperName>
        <label>PSON Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Total</description>
        <externalDeveloperName>TOTAL</externalDeveloperName>
        <label>Amount</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>